Renaming Package template file to not to have nuspec extension, so the package builder does not try to build it.

--- a/Templates/Templates.csproj
+++ b/Templates/Templates.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Package.nuspec" />
+    <None Include="Package.nuspec_tmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
