--- a/ATZ.ExternalAnnotations.FluentAssertions/ATZ.ExternalAnnotations.FluentAssertions.nuspec
+++ b/ATZ.ExternalAnnotations.FluentAssertions/ATZ.ExternalAnnotations.FluentAssertions.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <id>ATZ.ReSharperAnnotations.FluentAssertions</id>
     <version>2017.8.23</version>
-    <title>R# External Annotations for FluentAssertions</title>
+    <title>FluentAssertions External Annotations</title>
     <authors>Attila Tamas Zimler</authors>
     <owners>Attila Tamas Zimler</owners>
 
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/atzimler/ReSharperAnnotations</projectUrl>
     <licenseUrl>https://raw.githubusercontent.com/atzimler/ReSharperAnnotations/master/LICENSE</licenseUrl>
-    <description>R# External Annotations for FluentAssertions</description>
+    <description>3rd party unofficial annotations (Work in progress)</description>
     <releaseNotes />
     <copyright>Copyright 2017</copyright>
     <dependencies>
