Correcting file name for Xamarin.Forms.ExternalAnnotations - maybe that is why it is not working.

--- a/ATZ.ResharperAnnotations.Xamarin/ATZ.ExternalAnnotations.Xamarin.nuspec
+++ b/ATZ.ResharperAnnotations.Xamarin/ATZ.ExternalAnnotations.Xamarin.nuspec
@@ -19,6 +19,6 @@
   </metadata>
 
   <files>
-    <file src="Xamarin.Forms.xml" target="DotFiles/ExternalAnnotations/Xamarin" />
+    <file src="Xamarin.Forms.ExternalAnnotations.xml" target="DotFiles/ExternalAnnotations/Xamarin" />
   </files>
 </package>
